--- a/test/index.html
+++ b/test/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Skin Perview</title>
+  <link href="../bin/css/theme.css"
 </head>
 <body>
-  
+  <div class="panel"></div>
 </body>
 </html>
