add page title and rename file

--- a/test/index.html
+++ b/test/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Skin Perview</title>
-  <link href="../bin/css/theme.css"
+  <link href="../bin/css/theme.css" rel="stylesheet">
 </head>
 <body>
-  <div class="panel"></div>
+  <div class="app">
+    <div class="layout-page" style="top: 0px;">
+      <div class="layout-menu" style="background-color:#3A3A3A; width:250px; top: 0px;">menu</div>
+      <div class="layout-content">
+        <div class="page-title">
+          <div class="title">
+            <h1>一方通行</h1>
+            <p class="subtitle">是个前所未有的萝莉控</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
