--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,27 @@
             <p class="subtitle">是个前所未有的萝莉控</p>
           </div>
         </div>
+        <div class="button">
+          <div>
+            <span>实例:</span>
+            <button type="button" class="btn bp-btn-default">（默认）default</button>
+            <button type="button" class="btn bp-btn-primary">（确定）primary</button>
+            <button type="button" class="btn bp-btn-danger">（取消）danger</button>
+          </div>
+          <div>
+            <span>置灰:</span>
+            <button type="button" class="btn bp-btn-default" disabled>（默认尺寸）Default button</button>
+            <button type="button" class="btn bp-btn-primary" disabled>（默认尺寸）Default button</button>
+            <button type="button" class="btn bp-btn-danger" disabled>（默认尺寸）Default button</button>       
+          </div>
+          <div>
+            <span>大小:</span>
+            <button type="button" class="btn bp-btn-primary btn-lg">（大按钮）Large button</button>
+            <button type="button" class="btn bp-btn-primary">（默认尺寸）Default button</button>
+            <button type="button" class="btn bp-btn-primary btn-sm">（小按钮）Small button</button>
+            <button type="button" class="btn bp-btn-primary btn-xs">（超小尺寸）Extra small button</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
