add modal and form

--- a/test/index.html
+++ b/test/index.html
@@ -37,6 +37,16 @@
             <button type="button" class="btn bp-btn-primary btn-xs">（超小尺寸）Extra small button</button>
           </div>
         </div>
+        <div class="conter-wrapper">
+          <div style="background-color: #FFF; padding:10px;">
+            <form action="">
+              <div class="form-group">
+                <label class="control-label"><span class="required-star">*</span>龙破斩的咒文:</label>
+                <input type="text" class="form-control" />
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
   </div>
