replace main to primary

--- a/test/index.html
+++ b/test/index.html
@@ -59,7 +59,9 @@
             </form>
           </div>
           <div class="panel panel-default">
-            123
+            <div class="panel-heading">
+              <div class="panel-title">我是title</div>
+            </div>
           </div>
         </div>
       </div>
