--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,9 @@
     .button-container .btn {
       margin: 10px 10px;
     }
+    .radio-container label {
+      margin-right: 10px;
+    }
   </style>
 </head>
 <body>
@@ -55,6 +58,23 @@
               <div class="form-group">
                 <label class="control-label"><span class="required-star">*</span>龙破斩的咒文:</label>
                 <input type="text" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2"><span class="required-star">*</span>radio:</label>
+                <div class="col-ms-10 radio-container">
+                  <label for="radio1">
+                    <input type="radio" id="radio1" name="bp-radio" class="bp-radio">
+                    <span></span>
+                  </label>
+                  <label for="radio2">
+                    <input type="radio" id="radio2" name="bp-radio" class="bp-radio">
+                    <span></span>
+                  </label>
+                  <label for="radio3">
+                    <input type="radio" id="radio3" name="bp-radio" class="bp-radio">
+                    <span></span>
+                  </label>
+                </div>
               </div>
             </form>
           </div>
