--- a/test/index.html
+++ b/test/index.html
@@ -119,10 +119,11 @@
               </div>
             </form>
           </div>
-          <div class="panel panel-default">
+          <div class="panel bp-panel-primary">
             <div class="panel-heading">
               <div class="panel-title">我是title</div>
             </div>
+            <div class="panel-body">123</div>
           </div>
         </div>
       </div>
