--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,12 @@
     .button-container .btn {
       margin: 10px 10px;
     }
+    .dropdown-menu {
+      display: block;
+      position: relative;
+      float: none;
+      width: 160px;
+    }
   </style>
 </head>
 <body>
@@ -101,6 +107,15 @@
                   </label>
                 </div>
               </div>-->
+              <div class="form-group">
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </div>
             </form>
           </div>
           <div class="panel panel-default">
