--- a/test/index.html
+++ b/test/index.html
@@ -108,6 +108,7 @@
                 </div>
               </div>-->
               <div class="form-group">
+                <label for="control-label"><span class="required-star">*</span>Dropdown:</label>
                 <ul class="dropdown-menu">
                   <li><a href="#">Action</a></li>
                   <li><a href="#">Another action</a></li>
