--- a/test/index.html
+++ b/test/index.html
@@ -40,7 +40,7 @@
               <span>实例:</span>
               <button type="button" class="btn bp-btn-default">（默认）default</button>
               <button type="button" class="btn bp-btn-primary">（确定）primary</button>
-              <button type="button" class="btn bp-btn-danger">（取消）danger</button>
+              <button type="button" class="btn bp-btn-danger">（删除）danger</button>
             </div>
             <div class="form-group">
               <span>置灰:</span>
@@ -49,7 +49,7 @@
               <button type="button" class="btn bp-btn-danger" disabled>（默认尺寸）Default button</button>       
             </div>
             <div class="form-group">
-              <span>大小:</span>
+              <span>尺寸:</span>
               <button type="button" class="btn bp-btn-primary btn-lg">（大按钮）Large button</button>
               <button type="button" class="btn bp-btn-primary">（默认尺寸）Default button</button>
               <button type="button" class="btn bp-btn-primary btn-sm">（小按钮）Small button</button>
@@ -133,15 +133,67 @@
               <div class="panel-title">通常的Panel</div>
             </div>
             <div class="panel-body">123</div>
+            <div class="panel-footer">
+              <button type="button" class="btn bp-btn-default">（默认）default</button>
+              <button type="button" class="btn bp-btn-primary">（确定）primary</button>
+            </div>
           </div>
-           <div class="panel bp-panel-danger">
+          <div class="panel bp-panel-danger">
             <div class="panel-heading">
               <div class="panel-title">危险的Panel</div>
             </div>
             <div class="panel-body">123</div>
-            <div class="panel-footer">
+            <div class="panel-footer panel-footer-btn-right">
               <button type="button" class="btn bp-btn-default">（默认）default</button>
               <button type="button" class="btn bp-btn-primary">（确定）primary</button>
+            </div>
+          </div>
+          <div class="panel bp-panel-primary">
+            <div class="panel-heading">
+              <div class="panel-title">Condensed, Bordered, Striped Table</div>
+            </div>
+            <div class="panel-body">
+              <table class="table table-condensed table-bordered table-striped table-hover">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Address</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>John</td>
+                    <td>john@gmail.com</td>
+                    <td>London, UK</td>
+                  </tr>
+                  <tr>
+                    <td>Andy</td>
+                    <td>andygmail.com</td>
+                    <td>Merseyside, UK</td>
+                  </tr>
+                  <tr>
+                    <td>姓名</td>
+                    <td>邮箱</td>
+                    <td>地址</td>
+                  </tr>
+                  <tr>
+                    <td>John</td>
+                    <td>john@gmail.com</td>
+                    <td>London, UK</td>
+                  </tr>
+                  <tr>
+                    <td>Andy</td>
+                    <td>andygmail.com</td>
+                    <td>Merseyside, UK</td>
+                  </tr>
+                  <tr>
+                    <td>Frank</td>
+                    <td>frank@gmail.com</td>
+                    <td>Southampton, UK</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
           <div class="modal-dialog">
