--- a/test/demo.html
+++ b/test/demo.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <div class="app">
-    <div class="layout-page" style="top: 0px;">
-      <div class="layout-menu" style="background-color:#3A3A3A; width:250px; top: 0px;">menu</div>
+    <header class="bp-header" style="background-color:#3A3A3A; height: 63px; color: #fff;">header</header>
+    <div class="layout-page" style="top: 63px;">
+      <div class="layout-menu" style="background-color:#3A3A3A; width:250px; top: 63px; color: #fff;">menu</div>
       <div class="layout-content">
         <div class="page-title">
           <div class="title">
