样式统一整改

--- a/test/demo.html
+++ b/test/demo.html
@@ -26,19 +26,19 @@
                 <div class="form-group">
                   <div class="col-md-4">
                     <label class="col-md-4 control-label">优惠券ID:</label>
-                    <div class="col-md-8">
+                    <div class="col-md-8 input-padding-left">
                       <input type="text" class="form-control" placeholder="请输入优惠券ID" />
                     </div>
                   </div>
                   <div class="col-md-4">
                     <label class="col-md-4 control-label">优惠券名称:</label>
-                    <div class="col-md-8">
+                    <div class="col-md-8 input-padding-left">
                       <input type="text" class="form-control" placeholder="请输入优惠券名称" />
                     </div>
                   </div>
                   <div class="col-md-4">
                     <label class="col-md-4 control-label">商圈:</label>
-                    <div class="col-md-8">
+                    <div class="col-md-8 input-padding-left">
                       <input type="text" class="form-control" placeholder="请输入商圈关键字" />
                     </div>
                   </div>
@@ -46,7 +46,7 @@
                 <div class="form-group">
                   <div class="col-md-4">
                     <label class="col-md-4 control-label">优惠券状态:</label>
-                    <div class="col-md-8">
+                    <div class="col-md-8 input-padding-left">
                       <select class="form-control">
                         <option value="">全部</option>
                         <option value="1">1</option>
@@ -55,7 +55,7 @@
                   </div>
                   <div class="col-md-4">
                     <label class="col-md-4 control-label">优惠券类型:</label>
-                    <div class="col-md-8">
+                    <div class="col-md-8 input-padding-left">
                       <select class="form-control">
                         <option value="">全部</option>
                         <option value="1">1</option>
@@ -65,7 +65,7 @@
                   </div>
                   <div class="col-md-4">
                     <label class="col-md-4 control-label">来源:</label>
-                    <div class="col-md-8">
+                    <div class="col-md-8 input-padding-left">
                       <select class="form-control">
                         <option value="">全部</option>
                         <option value="1">1</option>
@@ -78,8 +78,8 @@
                 <div class="form-group">
                   <div class="col-md-8">
                     <label class="col-md-2 control-label">优惠券有效期:</label>
-                    <div class="col-md-10 form-datetime-container">
-                      <div class="col-md-5 dropdown input-left">
+                    <div class="col-md-10 form-datetime-container input-padding-left">
+                      <div class="col-md-5 dropdown input-left input-padding-left">
                         <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="javascript:;">
                           <div class="input-group">
                             <input type="text" class="form-control">
@@ -87,8 +87,8 @@
                           </div>
                         </a>
                       </div>
-                      <label class="col-md-1 control-label">至</label>
-                      <div class="col-md-5 dropdown">
+                      <label class="col-md-1 control-label input-padding-left date-font-center">至</label>
+                      <div class="col-md-5 dropdown input-padding-left">
                         <a class="dropdown-toggle" id="dropdown-end" role="button" data-toggle="dropdown" data-target="#" href="javascript:;">
                           <div class="input-group">
                             <input type="text" class="form-control">
@@ -100,7 +100,7 @@
                   </div>
                   <div class="col-md-4">
                     <label class="col-md-4 control-label">门店:</label>
-                    <div class="col-md-8">
+                    <div class="col-md-8 input-padding-left">
                       <input type="text" class="form-control" placeholder="请输入门店关键字" />
                     </div>
                   </div>
