--- a/test/index.html
+++ b/test/index.html
@@ -163,7 +163,7 @@
               <div class="panel-title">危险的Panel</div>
             </div>
             <div class="panel-body">123</div>
-            <div class="panel-footer panel-footer-btn-right">
+            <div class="panel-footer">
               <button type="button" class="btn bp-btn-default">（默认）default</button>
               <button type="button" class="btn bp-btn-primary">（确定）primary</button>
             </div>
