增加gulp任务流，方便开发

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Skin Perview</title>
-  <link href="../bin/css/theme.css" rel="stylesheet">
+  <link href="/css/theme.css" rel="stylesheet">
   <style>
     /**
     * 按钮容器
