--- a/test/demo.html
+++ b/test/demo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Skin Demo</title>
-  <link rel="stylesheet" href="../bin/css/theme.css">
+  <link rel="stylesheet" href="/css/theme.css">
 </head>
 <body>
   <div class="app">
