样式调整和增加

--- a/test/demo.html
+++ b/test/demo.html
@@ -112,10 +112,8 @@
               <button type="button" class="btn bp-btn-default">重置</button>
             </div>
           </div>
-          <div class="panel">
-            <div class="panel-body">
-              <button type="button" class="btn bp-btn-primary">新建优惠券</button>
-            </div>
+          <div class="bp-container">
+            <button type="button" class="btn bp-btn-primary">新建优惠券</button>
           </div>
           <div class="panel bp-panel-primary">
             <div class="panel-heading">
