--- a/test/index.html
+++ b/test/index.html
@@ -139,12 +139,21 @@
                 </ul>
               </div>
               <div class="form-group">
+                <label for="control-label">Select:</label>
                 <select multiple class="form-control">
                   <option>1</option>
                   <option>2</option>
                   <option>3</option>
                   <option>4</option>
                 </select>
+              </div>
+              <div class="form-group">
+                <label for="control-label">Nav:</label>
+                <ul class="nav nav-pills">
+                  <li role="presentation" class="active"><a ng-href="index.html#/discount/add">活动信息</a></li>
+                  <li ><a href="javascript:;" ng-disadled="true">活动规则</a></li>
+                  <li ><a href="javascript:;" ng-disadled="true">预算控制</a></li>
+                </ul>
               </div>
             </form>
           </div>
