--- a/test/demo.html
+++ b/test/demo.html
@@ -278,7 +278,7 @@
                 </tbody>
               </table>
               <div>
-                <a href="" target="_blank"><button class="btn bp-btn-default">导出Excel</button></a>
+                <a href="" target="_blank"><button class="btn bp-btn-primary">导出Excel</button></a>
                 <span>共 10 条记录</span>
               </div>
             </div>
