弹窗微调 readme完善

--- a/test/demo.html
+++ b/test/demo.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="form-group">
                   <div class="col-md-8">
-                    <label class="col-md-2 control-label">优惠券有效期:</label>
+                    <label class="col-md-2 control-label label-margin-left">优惠券有效期:</label>
                     <div class="col-md-10 form-datetime-container input-padding-left">
                       <div class="col-md-5 dropdown input-left input-padding-left">
                         <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="javascript:;">
