--- a/test/index.html
+++ b/test/index.html
@@ -56,6 +56,9 @@
               <button type="button" class="btn bp-btn-primary btn-xs">（超小尺寸）Extra small button</button>
             </div>
           </div>
+          <div class="bp-container bp-container-center">
+            <p>我是 bp-container &&  bp-container-center</p>
+          </div>
           <div class="bp-container">
             <p>我是bp-container</p>
             <form action="" class="form-horizontal">
