--- a/test/index.html
+++ b/test/index.html
@@ -25,8 +25,14 @@
 </head>
 <body>
   <div class="app">
-    <div class="layout-page" style="top: 0px;">
-      <div class="layout-menu" style="background-color:#3A3A3A; width:250px; top: 0px;">menu</div>
+    <header class="bp-header">
+      <div class="bp-header-logo">
+        <img src="http://img1.ffan.com/T158LTBgDT1RCvBVdK" alt="">
+      </div>
+      <div class="bp-header-title">飞凡智慧生活O2O开放平台运营管理中心</div>
+    </header>
+    <div class="layout-page" style="top: 63px;">
+      <div class="layout-menu" style="background-color:#3A3A3A; width:250px; top: 62px; color: #fff;">menu</div>
       <div class="layout-content">
         <div class="page-title">
           <div class="title">
