--- a/test/index.html
+++ b/test/index.html
@@ -234,6 +234,124 @@
               </table>
             </div>
           </div>
+          <div class="panel bp-panel-primary">
+            <div class="panel-heading">
+              <div class="panel-title">default Progressbars</div>
+            </div>
+            <div class="panel-body">
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar bp-progress-default" style="width:25%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar bp-progress-danger" style="width:35%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar bp-progress-warning" style="width:45%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar bp-progress-info" style="width:55%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar bp-progress-success" style="width:65%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            </div>
+          </div>
+          <div class="panel bp-panel-primary">
+            <div class="panel-heading">
+              <div class="panel-title">Animated Progresbars</div>
+            </div>
+            <div class="panel-body">
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped active bp-progress-default" style="width:25%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped active bp-progress-danger" style="width:35%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped active bp-progress-warning" style="width:45%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped active bp-progress-info" style="width:55%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped active bp-progress-success" style="width:65%"> 
+            				<span class="sr-only"></span> 
+            			</div> 
+            		</div> 
+            	</div>
+            </div>
+          </div>
+          <div class="panel bp-panel-primary">
+            <div class="panel-heading">
+              <div class="panel-title">other Progresbars(changes number based on value)</div>
+            </div>
+            <div class="panel-body">
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar bp-progress-default" style="width:55%"> 
+            				<b class="ng-binding ng-scope">51%</b>
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped active bp-progress-danger" style="width:65%"> 
+            				<span class="ng-binding ng-scope">65%</span>
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped bp-progress-warning" style="width:45%"> 
+            				<span class="ng-binding ng-scope">45%</span>
+            			</div> 
+            		</div> 
+            	</div>
+            	<div class="widgets-docs-elements">
+            		<div class="progress">
+            			<div class="progress-bar progress-bar-striped bp-progress-default" style="width:85%"> 
+            			</div> 
+            		</div> 
+            	</div>
+            </div>
+          </div>
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
