--- a/test/container.html
+++ b/test/container.html
@@ -13,7 +13,7 @@
       </div>
       <div class="bp-header-title">飞凡智慧生活O2O开放平台运营管理中心</div>
     </header>
-    <div class="layout-page" style="top: 63px;">
+    <div class="layout-page" style="top: 62px;">
       <div class="layout-menu" style="background-color:#3A3A3A; width:250px; top: 62px; color: #fff;">menu</div>
       <div class="layout-content">
         <div class="page-title">
@@ -25,17 +25,23 @@
         <div class="conter-wrapper">
           <div class="bp-container">
             <h4>bp-container && bp-container-center</h4>
-            <div class="bp-container" style="border: 1px solid #ececec; margin-top: 20px;">
-              <div class="form-group">这是一个bp-container容器</div>
+            <div class="form-group" style="margin-top: 15px;">
+              <h5>通用容器</h5>
+              <div class="bp-container" style="border: 1px solid #ececec; margin-top: 20px;">
+                <div class="form-group">这是一个bp-container容器</div>
+              </div>
+              <div>
+                <pre>&lt;div class="bp-container"&gt;&lt;/div&gt;</pre>
+              </div>
             </div>
-            <div>
-              <pre>&lt;div class="bp-container"&gt;&lt;/div&gt;</pre>
-            </div>
-            <div class="bp-container bp-container-center" style="border: 1px solid #ececec;">
-              <div class="form-group">这是一个bp-container && bp-container-center容器</div>
-            </div>
-            <div>
-              <pre>&lt;div class="bp-container bp-container-center"&gt;&lt;/div&gt;</pre>
+            <div class="form-group" style="margin-top: 15px;">
+              <h5>内容居中容器</h5>
+              <div class="bp-container bp-container-center" style="border: 1px solid #ececec;">
+                <div class="form-group">这是一个bp-container && bp-container-center容器</div>
+              </div>
+              <div>
+                <pre>&lt;div class="bp-container bp-container-center"&gt;&lt;/div&gt;</pre>
+              </div>
             </div>
           </div>
         </div>
