--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="bp-header-title">飞凡智慧生活O2O开放平台运营管理中心</div>
     </header>
-    <div class="layout-page" style="top: 63px;">
+    <div class="layout-page" style="top: 62px;">
       <div class="layout-menu" style="background-color:#3A3A3A; width:250px; top: 62px; color: #fff;">menu</div>
       <div class="layout-content">
         <div class="page-title">
@@ -172,8 +172,28 @@
             </div>
             <div class="panel-body">123</div>
             <div class="panel-footer">
-              <button type="button" class="btn bp-btn-default">（默认）default</button>
               <button type="button" class="btn bp-btn-primary">（确定）primary</button>
+              <button type="button" class="btn bp-btn-default">（默认）default</button>
+            </div>
+          </div>
+          <div class="panel bp-panel-primary">
+            <div class="panel-heading">
+              <div class="panel-title">通常的Panel</div>
+            </div>
+            <div class="panel-body">123</div>
+            <div class="panel-footer bp-panel-btn-center">
+              <button type="button" class="btn bp-btn-primary">（确定）primary</button>
+              <button type="button" class="btn bp-btn-default">（默认）default</button>
+            </div>
+          </div>
+          <div class="panel bp-panel-primary">
+            <div class="panel-heading">
+              <div class="panel-title">通常的Panel</div>
+            </div>
+            <div class="panel-body">123</div>
+            <div class="panel-footer bp-panel-btn-left">
+              <button type="button" class="btn bp-btn-primary">（确定）primary</button>
+              <button type="button" class="btn bp-btn-default">（默认）default</button>
             </div>
           </div>
           <div class="panel bp-panel-danger">
@@ -182,8 +202,8 @@
             </div>
             <div class="panel-body">123</div>
             <div class="panel-footer">
-              <button type="button" class="btn bp-btn-default">（默认）default</button>
               <button type="button" class="btn bp-btn-primary">（确定）primary</button>
+              <button type="button" class="btn bp-btn-default">（默认）default</button>
             </div>
           </div>
           <div class="panel bp-panel-primary">
