提交model说明文档以及添加form表单less及样式

--- a/test/index.html
+++ b/test/index.html
@@ -381,6 +381,54 @@
               </div>
             </div>
           </div>
+          <div class="bp-container">
+            <p>我是bp-container</p>
+            <form action="" class="form-horizontal">
+            	<div class="form-group">
+            		<label class="col-md-2 control-label" for="input">用户名：</label>
+            		<div class="col-lg-10">
+            			<input class="form-control" type="text" placeholder="请输入">
+            		</div>
+            	</div>
+            	<hr>
+            	<div class="form-group">
+            		<label class="col-md-2 control-label" for="input">密码：</label>
+            		<div class="col-lg-10">
+            			<input class="form-control" type="password">
+            		</div>
+            	</div>
+            	<hr>
+            	<div class="form-group">
+            		<label class="col-md-2 control-label" for="input">再次输入：</label>
+            		<div class="col-md-10">
+            			<input class="form-control" type="text" placeholder="请输入">
+            			<p class="help-block">这是一些提示信息</p>
+            		</div>
+            	</div>
+            	<hr>
+            	<div class="form-group">
+            		<label class="col-md-2 control-label" for="input">用户名：</label>
+            		<div class="col-lg-10">
+            			<input class="form-control underline" type="text" placeholder="请输入">
+            		</div>
+            	</div>
+            	<hr>
+            	<div class="form-group">
+            		<label class="col-md-2 control-label" for="input">禁用：</label>
+            		<div class="col-lg-10">
+            			<input class="form-control" type="text" placeholder="禁用项" disabled="">
+            		</div>
+            	</div>
+            	<hr>
+            	<div class="form-group">
+            		<label class="col-md-2 control-label" for="input">静态显示：</label>
+            		<div class="col-lg-10">
+            			<p class="form-control-static">email@example.com</p>
+            		</div>
+            	</div>
+            	<hr>
+            	</form>
+            </div>
         </div>
       </div>
     </div>
